[FYP-78] Implement a coronavirus API